--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,12 @@
         <input type="checkbox" name="attributes" value="mag"> Magnitude
         <input type="checkbox" name="attributes" value="place"> Place
         <br>
+        <input type="checkbox" name="chart" value="ScatterPlot"> ScatterPlot
+        <input type="checkbox" name="chart" value="BarChart"> BarChart
+        <input type="checkbox" name="chart" value="PieChart"> PieChart
+        <br>
+
+        <br>
         <input type="submit" value="Generate Chart">
     </form>
 </body>
